    - Omission of the response header Connection-Unique
      The client can manage this better for itself. The created ___uid
      attribute of the elements are now based on the storage revision ___rev
      attribute.
      TODO: Update description in manual
CR: Service: Review and optimization of CONNECT
    - Storage must be initialized mandatory with CONNECT before it can be used.
CR: Test: Review and optimization
    - Added option XMEX_DEBUG_MODE
      The activation of debug mode is primarily planned for unit tests and
      enforces the auto incremental revision type. In addition, the headers
      Hash-Request, Hash-Response and Hash-Storage are added to the response,
      which can be checked by the unit tests.
      TODO: Add description in manual
      TODO: Test
    - Switch to the use of XMEX_DEBUG_MODE
      TODO: Test

1.3.1 20240801
BF: Review: Optimization/Corrections
BF: Build: Optimization / correction of the release info process
CR: Build: Releases are now only available on the release page
CR: OpenAPI: Added the missing OpenAPI Specification
CR: Project: Moved repository to xml-micro-exchange-php
NT: Harmonization of version numbers for the different implementations
    Major and minor describe the API, patch refers to the implementation.
    The version of OpenAPI therefore only uses major and minor, patch is always 0.

1.3.0 20210525
BF: Service: Uniform use of status 204 for 202 / 404
    Status 404 always refers storage and not entities/addressed targets in the storage.
BF: Service: Uniform use of status 204 for 404 in relation to targets in the storage (axes)
    Status 404 is now only used in relation to storage.
    Addressed targets (axes) use status 204 in combination with the response header Storage-Effects.
BF: Service: Optimization/harmonization of content types for XML
    Fragments (PUT/PATCH) uses text/xhtml
    XML output uses application/xml
    XSLT input (POST) uses application/xslt+xml